ARROW-13605: [C++] Use mutexes instead of atomics to avoid TSan warning